--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
       <ul class="social-icons">
         <!-- single item -->
         <li>
-          <a href="#" class="social-icon">
+          <a href="www.facebook.com" target="_blank" class="social-icon">
             <i class="fab fa-facebook"></i>
           </a>
         </li>
